[gd_scene load_steps=10 format=3 uid="uid://bgcggd80gs6sh"]

[ext_resource type="Script" uid="uid://bltecim4slosc" path="res://Main/Characters/Enemies/IshimRanger/ishim_ranger.gd" id="1_cw4bv"]
[ext_resource type="Material" uid="uid://cv7l0r86mk435" path="res://assets/materials/hitflash_mat.tres" id="2_4eule"]
[ext_resource type="Script" uid="uid://v8gickpnd8q0" path="res://Main/Utility/Components/health_component.gd" id="3_8pu60"]
[ext_resource type="Script" uid="uid://cgpmhci7164s6" path="res://Main/Utility/Components/hitbox_component.gd" id="4_vda0j"]
[ext_resource type="PackedScene" uid="uid://csm4pxrfit34f" path="res://Main/Characters/Enemies/IshimRanger/ranger_bullet.tscn" id="5_8pu60"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8pu60"]
albedo_color = Color(1, 0.47451, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4uy4w"]
material = SubResource("StandardMaterial3D_8pu60")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7skgo"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_w8f1x"]
radius = 0.576949
height = 2.12418

[node name="IshimRanger" type="CharacterBody3D" groups=["Enemies"]]
collision_layer = 4
script = ExtResource("1_cw4bv")
comfy_radius = 20
bullet = ExtResource("5_8pu60")
max_health = 1.0
movement_speed = 8

[node name="MeshInstance3D" type="MeshInstance3D" parent="." groups=["Enemies"]]
material_overlay = ExtResource("2_4eule")
mesh = SubResource("CapsuleMesh_4uy4w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_7skgo")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_8pu60")

[node name="HitboxComponent" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 5
script = ExtResource("4_vda0j")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape3D_w8f1x")

[node name="PathfindTimer" type="Timer" parent="."]
autostart = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
radius = 10.0

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="body_entered" from="HitboxComponent" to="." method="_on_hitbox_component_body_entered"]
[connection signal="timeout" from="PathfindTimer" to="." method="_on_pathfind_timer_timeout"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_bullet_timer_timeout"]
